[gd_scene load_steps=14 format=3 uid="uid://bentwtqcbxa87"]

[ext_resource type="Script" uid="uid://cxjoi715ox3ab" path="res://scenes/ui/inventory_panel.gd" id="1_ta3uk"]
[ext_resource type="Texture2D" uid="uid://wsupf8cja1rh" path="res://assets/GUI.png" id="2_17uwj"]
[ext_resource type="PackedScene" uid="uid://cogta850vi4o2" path="res://scenes/ui/item_slot.tscn" id="2_cvy6a"]
[ext_resource type="PackedScene" uid="uid://dysc7nitfm7vg" path="res://scenes/ui/equipment_slot.tscn" id="2_ta3uk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ta3uk"]
atlas = ExtResource("2_17uwj")
region = Rect2(2, 34, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcq1t"]
atlas = ExtResource("2_17uwj")
region = Rect2(145, 98, 46, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_b11k6"]
atlas = ExtResource("2_17uwj")
region = Rect2(80, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvod"]
atlas = ExtResource("2_17uwj")
region = Rect2(48, 96, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lcq1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_17uwj"]
atlas = ExtResource("2_17uwj")
region = Rect2(145, 81, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvy6a"]
texture = SubResource("AtlasTexture_17uwj")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4tgr1"]
atlas = ExtResource("2_17uwj")
region = Rect2(145, 81, 46, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ta3uk"]

[node name="InventoryPanel" type="MarginContainer"]
offset_right = 600.0
offset_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_ta3uk")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = SubResource("AtlasTexture_ta3uk")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_lcq1t")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 28
text = "背包"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 19
text = "X"
icon = SubResource("AtlasTexture_b11k6")
flat = true
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_tdvod")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="NecklaceSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "NecklaceSlot"
equipment_slot_type = 5

[node name="WeaponSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "WeaponSlot"
equipment_slot_type = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HeadSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "HeadSlot"
equipment_slot_type = 1

[node name="ChestSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "ChestSlot"
equipment_slot_type = 2

[node name="LegsSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "LegsSlot"
equipment_slot_type = 3

[node name="FeetSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "FeetSlot"
equipment_slot_type = 4

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="RingSlot1" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "RingSlot1"
equipment_slot_type = 7

[node name="RingSlot2" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "RingSlot2"
equipment_slot_type = 7

[node name="RingSlot3" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("2_ta3uk")]
layout_mode = 2
mouse_filter = 1
equipment_slot_name = "RingSlot3"
equipment_slot_type = 7

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_tdvod")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="TabBar" type="TabBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
current_tab = 0
tab_count = 4
tab_0/title = "全部"
tab_1/title = "装备"
tab_2/title = "消耗品"
tab_3/title = "材料"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer"]
layout_mode = 2

[node name="ItemSlotGridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="ItemSlot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot2" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot3" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot4" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot5" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot6" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot7" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot8" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot9" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot10" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot11" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot12" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot13" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot14" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot15" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot16" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot17" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot18" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot19" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="ItemSlot20" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/ScrollContainer/MarginContainer/ItemSlotGridContainer" instance=ExtResource("2_cvy6a")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="DecomposingButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxTexture_lcq1t")
theme_override_styles/normal = SubResource("StyleBoxTexture_cvy6a")
text = "分解"
icon = SubResource("AtlasTexture_4tgr1")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PackingButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_styles/focus = SubResource("StyleBoxTexture_ta3uk")
theme_override_styles/normal = SubResource("StyleBoxTexture_cvy6a")
text = "整理
"
icon = SubResource("AtlasTexture_4tgr1")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="tab_changed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/DecomposingButton" to="." method="_on_decomposing_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/PackingButton" to="." method="_on_packing_button_pressed"]
